Changed syntax highlighting, Added API system and Small addjustments, version 0.4

--- a/templates/pastebum.html
+++ b/templates/pastebum.html
@@ -12,14 +12,14 @@
         <code>
             <b>~Project</b><br>
             Author: Kyshi (<a href="https://kyshi.github.io" target="_blank">https://kyshi.github.io</a>)<br>
-            license: MIT<br>
-            Version: 0.3<br>
+            License: MIT<br>
+            Version: 0.4<br>
             Status: alpha<br>
             Github: <a href="https://github.com/kyshi/PasteBum" target="_blank">https://github.com/kyshi/PasteBum</a><br><br>
 
-            <b>~Features (version 0.3 | alpha)</b><br>
-            Note page edited.<br>
-            Added "Copy Text" button to note page.<br>
+            <b>~Features (version 0.4 | alpha)</b><br>
+            Changed syntax highlighting<br>
+            Added API system. You can will create note with url now.<br>
             Small adjustments.<br>
         </code>
     </div>
