--- a/static/css/note.css
+++ b/static/css/note.css
@@ -1,47 +1,58 @@
 #content{
-    border: 1px solid #bbb;
-    background-color: #eee;
-    padding-top: 15px;
-    border-radius: 5px;
-    line-height: 16px;
-    font-size: 14px;
+  border: 1px solid #bbb;
+  background-color: #eee;
+  padding-top: 15px;
+  border-radius: 5px;
+  line-height: 16px;
+  font-size: 15px;
 }
 
 #text{
-    background: #eee !important;
-    font-family: monospace;
-    font-size: 15px;
-    font-weight: 400;
+  background: #eee !important;
+  font-family: monospace;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 #copy:hover{
-    text-decoration: underline;
-    cursor: pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /*COPY ALERT BOX*/
 /* The alert message box */
 #alert {
-    padding: 20px;
+  padding: 20px;
     background-color: rgb(1, 87, 1);
     color: white;
     margin-bottom: 15px;
     display: none;
-  }
+}
   
-  /* The close button */
+/* The close button */
 #closebtn {
-    margin-left: 15px;
-    color: white;
-    font-weight: bold;
-    float: right;
-    font-size: 22px;
-    line-height: 20px;
-    cursor: pointer;
-    transition: 0.3s;
-  }
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
   
-  /* When moving the mouse over the close button */
+/* When moving the mouse over the close button */
 #closebtn:hover {
-    color: black;
-  }
+  color: black;
+}
+
+.hljs-string{
+  color: green;
+}
+.hljs-keyword{
+  color: blue;
+}
+
+.hljs-params{
+  color: darkgoldenrod;
+}
