Updated note page and note url, added some meta tags in the index page, version 0.5

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <meta charset="UTF-8">
     <!--link rel="icon" href="../static/images/logo.png" type="image/x-icon">-->
+    <meta property="og:title" content="PasteBum" />
+    <meta property="og:url" content="https://pastebum.herokuapp.com/" />
+    <meta property="og:description" content="PasteBum is a text/code share service.">
+    <meta property="og:image" content="https://i.hizliresim.com/4i3SVl.png" />
+    <meta content="#000" data-react-helmet="true" name="theme-color">
     <title>PasteBum</title>
 </head>
 <body>
