--- a/templates/pastebum.html
+++ b/templates/pastebum.html
@@ -13,14 +13,15 @@
             <b>~Project</b><br>
             Author: Kyshi (<a href="https://kyshi.github.io" target="_blank">https://kyshi.github.io</a>)<br>
             License: MIT<br>
-            Version: 0.4<br>
+            Version: 0.5<br>
             Status: alpha<br>
             Github: <a href="https://github.com/kyshi/PasteBum" target="_blank">https://github.com/kyshi/PasteBum</a><br><br>
 
-            <b>~Features (version 0.4 | alpha)</b><br>
-            Changed syntax highlighting<br>
-            Added API system. You can will create note with url now.<br>
-            Small adjustments.<br>
+            <b>~Features (version 0.5 | alpha)</b><br>
+            Added 'Details' section in the note page.<br>
+            Added Open Graph meta tags in the index page.<br>
+            Url of note shortened<br>
+            Small adjustments<br>
         </code>
     </div>
 <body>
