API system edited, version 0.6

--- a/templates/informative_text.html
+++ b/templates/informative_text.html
@@ -12,6 +12,10 @@
         <p>
             This website is a platform for text sharing and it is open to everyone. The permanence of the data shared is not guaranteed and could be deleted at any time. The legal responsibility of any illegal data shared on the website is not the website's responsibility. Also, anything shared is open to anyone and everyone can see it. If there is any content that you think is problematic you can reach us at <a href="mailto:kyshi58@outlook.com">kyshi58@outlook.com</a> and send us the URL
         </p>
+        <p>
+            <b>PasteBum for Developer</b><br>
+            You can reach <a href="/api/documentation">PasteBum API Documentation</a> for get information about PasteBum API.
+        </p>
     </div>
 
 </body>
