--- a/templates/404.html
+++ b/templates/404.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/404.css')}}">
     <!--link rel="icon" href="../static/images/logo.png" type="image/x-icon">-->
-    <title>PasteBum</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/404.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
+    <title>PasteBum - 404</title>
 </head>
 <body>
        <div align="center">
