--- a/templates/api_doc.html
+++ b/templates/api_doc.html
@@ -1,14 +1,14 @@
 <html>
   <head>
+    <meta charset="UTF-8">
+    <!--link rel="icon" href="../static/images/logo.png" type="image/x-icon">-->
     <meta property="og:title" content="PasteBum API Documentation" />
     <meta property="og:url" content="https://pastebum.herokuapp.com/api/documentation" />
     <meta property="og:description" content="PasteBum API allows you to use PasteBum features. You can using only url, create a note or view features of a note. These, come as json data." />
     <meta property="og:image" content="https://i.hizliresim.com/4i3SVl.png" />
-
     <link rel="stylesheet" href="{{url_for('static', filename='css/api_doc.css')}}">
-    <link rel="stylesheet" href="../static/css/api_doc.css">
-    <meta charset="UTF-8" />
-    <title></title>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
+    <title>PasteBum API Documentation</title>
   </head>
   <body>
       <h1 id="title">PasteBum API Documentation</h1>
