--- a/templates/contributors.html
+++ b/templates/contributors.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Contributers</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/contributors.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
+    <!--link rel="icon" href="../static/images/logo.png" type="image/x-icon">-->
+    <title>PasteBum - Contributors</title>
 
     <div class="container" style="margin-top: 20px;">
-        <div align="center"><h1>Contributers</h1></div>
-        <table class="table" style="margin-top: 50px;">
-            <thead>
-              <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Role</th>
-                <th scope="col">Discord</th>
-                <th scope="col">Github</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">pozitronx</th>
-                <td>Logo Designer</td>
-                <td>pozitronx#0603</td>
-                <td><a href="https://github.com/ibrahimcetin" target="_blank">ibrahimcetin</a></td>
-              </tr>
-            </tbody>
-          </table>
+    <div align="center"><h1>Contributors</h1></div>
+    <p align="center">Thanks to all contributors</p>
+    <table id="table" align="center">
+        <thead>
+          <tr>
+            <th scope="col"><u>Name</u></th>
+            <th scope="col"><u>Role</u></th>
+            <th scope="col"><u>Discord</u></th>
+            <th scope="col"><u>Github</u></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr align="center">
+            <th scope="row">pozitronx</th>
+            <td>Logo Designer</td>
+            <td><a href="https://discord.com/users/376349477352505344" target="_blank">pozitronx#0603</a></td>
+            <td><a href="https://github.com/ibrahimcetin" target="_blank">ibrahimcetin</a></td>
+          </tr>
+          <tr align="center">
+            <th scope="row">MegaCrafter</th>
+            <td>Frontend</td>
+            <td><a href="https://discord.com/users/291168238140653578" target="_blank">MegaCrafter#7368</a></td>
+            <td><a href="https://github.com/MegaCrafter" target="_blank">MegaCrafter</a></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-
-    
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
