--- a/templates/note.html
+++ b/templates/note.html
@@ -1,19 +1,11 @@
 <html>
   <head>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/default.min.css"
-    />
-
+    <meta charset="UTF-8">
+    <!--link rel="icon" href="../static/images/logo.png" type="image/x-icon">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/default.min.css"/>
     <link rel="stylesheet" href="{{url_for('static', filename='css/note.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
     <script src="{{url_for('static', filename='js/copy.js')}}"></script>
-    <meta charset="UTF-8" />
     <title>Note - {{title}}</title>
   </head>
   <body>
@@ -21,17 +13,17 @@
         <span id="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
         <img src="{{url_for('static', filename='images/successfully.png')}}" width="25"><b>Successfully!</b>&ensp;Content copied successfully.
       </div>
-      <div style="margin-top: 30px" class="container">
-      <h1>{{title}}</h1>
+      <div style="margin-top: 30px" id="box">
+      <h1 class="title">{{title}}</h1>
       <br/>
-      <details>
+      <details id="details">
         <summary>Details</summary>
         <b>Syntax:</b> {{syntax}}<br>
         <b>Creation Date:</b> {{date}}<br>
         <b>Data Size (byte):</b> {{data_size}}
       </details>
       <br/>
-      <div class="container" id="content">
+      <div id="content">
         <table style="float: left;">
             <table>
                 <tr>
@@ -43,7 +35,7 @@
                 </tr> 
             </table>
           </table>
-          <p id="copy" onClick="copyElementText('text', 'alert')">Copy Text</p>
+          <p id="copy-text" onClick="copyElementText('text', 'alert')" >Copy Text</p>
       </div>
     </div>
 
@@ -51,20 +43,5 @@
     <script>
       hljs.initHighlightingOnLoad();
     </script>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
