--- a/templates/pastebum.html
+++ b/templates/pastebum.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <!--link rel="icon" href="../static/images/logo.png" type="image/x-icon">-->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/theme.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
     <title>PasteBum</title>
 </head>
-    <div>
+    <div class="main">
         <h1>PasteBum</h1>
         <hr>  
         <b>Pastebum is a text/code share service.</b><br><br>    
@@ -13,15 +15,12 @@
             <b>~Project</b><br>
             Author: Kyshi (<a href="https://kyshi.github.io" target="_blank">https://kyshi.github.io</a>)<br>
             License: MIT<br>
-            Version: 0.6<br>
+            Version: 0.7<br>
             Status: alpha<br>
             Github: <a href="https://github.com/kyshi/PasteBum" target="_blank">https://github.com/kyshi/PasteBum</a><br><br>
 
-            <b>~Features (version 0.6 | alpha)</b><br>
-            Added 'Details' section in the note page.<br>
-            Added Open Graph meta tags in the index page.<br>
-            Url of note shortened<br>
-            Small adjustments<br>
+            <b>~Features (version 0.7 | alpha)</b><br>
+            Big frontend update.<br>
         </code>
     </div>
 <body>
