--- a/templates/informative_text.html
+++ b/templates/informative_text.html
@@ -2,18 +2,19 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/informative_text.css')}}">
     <!--link rel="icon" href="../static/images/logo.png" type="image/x-icon">-->
-    <title>PasteBum</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/informative_text.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
+    <title>PasteBum - Informative Text</title>
 </head>
 <body>
     <div id="content">
         <h1>Informative Text</h1>
         <p>
-            This website is a platform for text sharing and it is open to everyone. The permanence of the data shared is not guaranteed and could be deleted at any time. The legal responsibility of any illegal data shared on the website is not the website's responsibility. Also, anything shared is open to anyone and everyone can see it. If there is any content that you think is problematic you can reach us at <a href="mailto:kyshi58@outlook.com">kyshi58@outlook.com</a> and send us the URL
+            This website is a platform for text sharing and it is open to everyone. The permanence of the data shared is not guaranteed and could be deleted at any time. The legal responsibility of any illegal data shared on the website is not the website's responsibility. Also, anything shared is open to anyone and everyone can see it. If there is any content that you think is problematic you can reach us at <a href="mailto:kyshi58@outlook.com">kyshi58@outlook.com</a> and send us the URL. Thanks to all <a href="/contributors">contributors</a>.
         </p>
         <p>
-            <b>PasteBum for Developer</b><br>
+            <b><u>PasteBum for Developer</u></b><br>
             You can reach <a href="/api/documentation">PasteBum API Documentation</a> for get information about PasteBum API.
         </p>
     </div>
