--- a/templates/pastebum.html
+++ b/templates/pastebum.html
@@ -15,12 +15,19 @@
             <b>~Project</b><br>
             Author: Kyshi (<a href="https://kyshi.github.io" target="_blank">https://kyshi.github.io</a>)<br>
             License: MIT<br>
-            Version: 0.7<br>
+            Version: 0.8<br>
             Status: alpha<br>
             Github: <a href="https://github.com/kyshi/PasteBum" target="_blank">https://github.com/kyshi/PasteBum</a><br><br>
 
-            <b>~Features (version 0.7 | alpha)</b><br>
-            Big frontend update.<br>
+            <b>~Features (version 0.8 | alpha)</b><br>
+            Updated API system.<br>
+            Renewed <a href="/api/documentation">API Documentation</a>.<br>
+            Line shift issue resolved.<br>
+            Added rate limit.<br>
+            Title can't empty.<br>
+            Content can't empty. (so... partly.)<br>
+            A slight change in <a href="/informative_text">Informative Text</a>.<br>
+            Small adjustments.<br>
         </code>
     </div>
 <body>
